DB relation on models pogress

--- a/myshop/products/templates/products/home.html
+++ b/myshop/products/templates/products/home.html
@@ -37,6 +37,8 @@
                 <div style="padding:20px 25px">
                     <h3>{{product.title}}</h3>
                     <p>{{product.description}}</p>
+                    <p>{{product.brand.title}}
+                    <img src={{product.brand.logo.url}} width=100px></img>
                     <a href="">View Product</a>
                 </div>
             </div>
