--- a/myshop/products/templates/products/product_detail_page.html
+++ b/myshop/products/templates/products/product_detail_page.html
@@ -34,8 +34,32 @@
             <h3 style="font-weight:bold; margin:0px;">Customer reviews</h3>
             <form action="" method="POST">
                 {% csrf_token %}
-                <input type="text" placeholder="write your review">
-                <button style="width:auto;padding:10px;display:flex!important;margin:20px 0px";>Submit</button>
+                {% comment %} <input type="text" placeholder="write your review" name="review">
+                <button style="width:auto;padding:10px;display:flex!important;margin:20px 0px";>Submit</button> {% endcomment %}
+
+                {% if messages%}
+                {% for msg in messages %}
+                <p style="color:#22BB33;">{{msg}}</p>
+                {% endfor %}
+                {% endif %}
+               
+                {% comment %} {{form}}  {% endcomment %}
+                {{form.name.label_tag}}<br>
+                {%for error in form.name.errors%}
+                    <p style="color:red;">{{error}}</p>
+                {%endfor%}
+                {{form.name}}<br>
+                
+                {{form.email.label_tag}}<br>
+                {%for error in form.email.errors%}
+                    <p style="color:red;">{{error}}</p>
+                {% endfor %}
+                {{form.email}}<br>
+
+                
+
+                <button type="Submit">Submit</button>
+                                
             </form>
         </section>
 
