--- a/myshop/products/templates/products/product_detail_page.html
+++ b/myshop/products/templates/products/product_detail_page.html
@@ -31,7 +31,7 @@
             </div> {% endcomment %}
         </main>
         <section style="margin:40px 200px; padding:15px 15px; background-color:lightgray; border-radius:10px;">
-            <h3 style="font-weight:bold; margin:0px;">Customer reviews</h3>
+            <h3 style="font-weight:bold; margin:0px;">write your reviews</h3>
             <form action="" method="POST">
                 {% csrf_token %}
                 {% comment %} <input type="text" placeholder="write your review" name="review">
@@ -54,5 +54,37 @@
                 <button type="Submit">Submit</button>
                                 
             </form>
-        </section>    
+            
+            <div style="width:95%; padding:20px; display: flex; flex-direction:column; background:whitesmoke;">
+                <h3 style="font-weight:bold; margin:0px;">Reviews</h3>
+
+                {%for data in feedbackData%}
+                <span style="font-size:10px;">{{data.name}}</span>
+                <span style="font-size:15px;">{{data.text}}</span>
+                <span style="font-size:15px;">ratings : {{data.rating}}</span> 
+                <button onclick = "showRatings('{{data.rating}}')">Call</button>
+                <div class="progress" style="width: 100%;
+                height: 20px;
+                background-color: red;
+                border-radius: 4px;
+                overflow: hidden;">
+                    <div class="progress-bar1" role="progressbar" id="progressBar"aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style = 'width:{{data.rating}}%; background:orange;' ></div>
+                </div>                
+                {%endfor%}
+            <div>
+            
+        </section> 
+        
+        <script>
+            function showRatings(rating){
+                var progressbar=document.getElementsByClassName("progress-bar1"); 
+               // progressBar.style.width=`${rating}*($rating*10)`;
+                var rate=(rating*20)/rating;
+                var finalwidth=rating*rate;
+                progressbar.style.width=finalwidth;      
+                //return progressBar
+            }
+            
+        </script>
+         
 {% endblock %}
