--- a/myshop/products/templates/products/product_detail_page.html
+++ b/myshop/products/templates/products/product_detail_page.html
@@ -34,8 +34,6 @@
             <h3 style="font-weight:bold; margin:0px;">write your reviews</h3>
             <form action="" method="POST">
                 {% csrf_token %}
-                {% comment %} <input type="text" placeholder="write your review" name="review">
-                <button style="width:auto;padding:10px;display:flex!important;margin:20px 0px";>Submit</button> {% endcomment %}
                 {% if success_message %}
                 <div class="alert alert-success" style="color:green;">
                     {{ success_message }}
@@ -55,10 +53,10 @@
                                 
             </form>
             
-            <div style="width:95%; padding:20px; display: flex; flex-direction:column; background:whitesmoke;">
+            <div style="width:95%; padding:20px; display: flex; flex-direction:column; background:whitesmoke;" id="ratings-div">
                 <h3 style="font-weight:bold; margin:0px;">Reviews</h3>
 
-                {%for data in feedbackData%}
+                {% comment %} {%for data in feedbackData%}
                 <span style="font-size:10px;">{{data.name}}</span>
                 <span style="font-size:15px;">{{data.text}}</span>
                 <span style="font-size:15px;">ratings : {{data.rating}}</span> 
@@ -67,22 +65,63 @@
                 background-color: red;
                 border-radius: 4px;
                 overflow: hidden;">
-                    <div class="progress-bar1" role="progressbar" id="progressBar"aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style = 'width:{{data.rating}}%; background:orange;' ></div>
-                </div>                
-                {%endfor%}
+                <div class="progress-bar1" role="progressbar" id="progressBar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="background: orange;">showRatings({{ data.rating }})</div>                
+                {%endfor%} {% endcomment %}
             <div>
             
         </section> 
         
         <script>
-            function showRatings(rating){
-                var progressbar=document.getElementsByClassName("progress-bar1"); 
-               // progressBar.style.width=`${rating}*($rating*10)`;
-                var rate=(rating*20)/rating;
-                var finalwidth=rating*rate;
-                progressbar.style.width=finalwidth;      
-                //return progressBar
-            }
+        var progressBars = document.getElementById("ratings-div");
+var alldata = [{% for data in feedbackData %}
+    {
+        "name": "{{ data.name }}",
+        "text": "{{ data.text }}",
+        "rating": (({{ data.rating }} * 20) / {{ data.rating }}) * {{ data.rating }}
+    },
+{% endfor %}];
+
+
+alldata.forEach(function(data) {
+    var nameSpan = document.createElement("span");
+    nameSpan.innerHTML ="User : "+ data.name;
+    nameSpan.style.fontSize="15px";
+    nameSpan.style.background="white";
+    progressBars.appendChild(nameSpan);
+
+
+    var textSpan = document.createElement("span");
+    textSpan.innerHTML = data.text;
+    progressBars.appendChild(textSpan);
+
+    var ratingDiv = document.createElement("div");
+    ratingDiv.style.background = "whitesmoke";
+    ratingDiv.style.border = "2px solid gray";
+    ratingDiv.style.borderRadius = "4px";
+    ratingDiv.style.width = "50%"; // Adjust width as needed
+    ratingDiv.style.height = "20px"; // Adjust height as needed
+    ratingDiv.style.display = "flex";
+    ratingDiv.style.marginBottom = "20px";
+    progressBars.appendChild(ratingDiv);
+
+    var ratingSpan = document.createElement("span");
+    ratingSpan.innerHTML = data.rating +'%';
+    ratingSpan.style.background = "orange";
+    ratingSpan.style.borderRadius = "2px";
+    ratingSpan.style.color = "white";
+    ratingSpan.style.display = "block"; // Make it block to fill the parent div
+    ratingSpan.style.width = data.rating + '%';
+    ratingSpan.style.height = "16px";
+    ratingDiv.appendChild(ratingSpan);
+
+});
+        {% comment %} var name1=document.createElement("span");
+        name1.innerHTML=alldata.name;
+        var text=document.createElement("span");
+        var ratingspr=document.createElement("span");
+        console.log(alldata)
+         {% endcomment %}
+            
             
         </script>
          
