--- a/myshop/products/templates/products/product_detail_page.html
+++ b/myshop/products/templates/products/product_detail_page.html
@@ -4,7 +4,7 @@
 {% block description %}{{product.description}}{% endblock %}
 {% block robots %}index, follow{% endblock %}
 {% block keywords %}signup, myshop{% endblock %}
-{% block css %}{% static "products/signup.css" %}{% endblock %}
+{% block css %}{% static "products/section.css" %}{% endblock %}
 {% block title %}{{product.title}}{% endblock %}
 
 {% block body %}
@@ -24,11 +24,7 @@
                 <p>{{product.}}</p>
                 <button>Add to Cart</button>
             </div>
-            {% comment %} <div>
-                {%for suggestion in product.suggestion%}
-                <h1>{{suggestion}}</h1>
-                {% endfor %}
-            </div> {% endcomment %}
+               
         </main>
         <section style="margin:40px 200px; padding:15px 15px; background-color:lightgray; border-radius:10px;">
             <h3 style="font-weight:bold; margin:0px;">write your reviews</h3>
@@ -39,15 +35,15 @@
                     {{ success_message }}
                 </div>
                 {% endif %}
-                {% for field in form %}<br>
-                {{field.label_tag}}<br>
-                {{field}}<br>
+                {% for field in form %}
+                {{field.label_tag}}
+                {{field}}
                 {% if field.help_text %}
                 {{field.help_text}}
                 {% endif %}
                 {%for error in field.errors%}
                     <p style="color:red;">{{error}}</p>
-                {% endfor %}<br>
+                {% endfor %}
                 {% endfor %}
                 <button type="Submit">Submit</button>
                                 
@@ -56,17 +52,6 @@
             <div style="width:95%; padding:20px; display: flex; flex-direction:column; background:whitesmoke;" id="ratings-div">
                 <h3 style="font-weight:bold; margin:0px;">Reviews</h3>
 
-                {% comment %} {%for data in feedbackData%}
-                <span style="font-size:10px;">{{data.name}}</span>
-                <span style="font-size:15px;">{{data.text}}</span>
-                <span style="font-size:15px;">ratings : {{data.rating}}</span> 
-                <div class="progress" style="width: 100%;
-                height: 20px;
-                background-color: red;
-                border-radius: 4px;
-                overflow: hidden;">
-                <div class="progress-bar1" role="progressbar" id="progressBar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="background: orange;">showRatings({{ data.rating }})</div>                
-                {%endfor%} {% endcomment %}
             <div>
             
         </section> 
@@ -114,15 +99,7 @@ alldata.forEach(function(data) {
     ratingSpan.style.height = "16px";
     ratingDiv.appendChild(ratingSpan);
 
-});
-        {% comment %} var name1=document.createElement("span");
-        name1.innerHTML=alldata.name;
-        var text=document.createElement("span");
-        var ratingspr=document.createElement("span");
-        console.log(alldata)
-         {% endcomment %}
-            
-            
-        </script>
+});          
+    </script>
          
 {% endblock %}
